changed small bug where it would break the scroll on project previews

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -84,6 +84,7 @@ nav .nav-links {
 ***********************/
 .card .card-reveal {
     padding: 30px;
+    overflow-y: hidden;
 }
 .card-reveal p {
     text-align: justify;
